src/objects/SurveyFeedback__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Feedbacks</relationshipLabel>
        <relationshipName>Survey_Feedbacks</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Master</label>
        <referenceTo>Survey2__c</referenceTo>
        <relationshipLabel>Survey Feedbacks</relationshipLabel>
        <relationshipName>Survey_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Date__c</fullName>
        <label>Survey Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_Name__c</fullName>
        <label>Survey Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Taker_s_Name__c</fullName>
        <formula>Contact__r.FirstName + &quot; &quot; + Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Taker&apos;s Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_URL__c</fullName>
        <label>Survey URL</label>
        <type>Url</type>
    </fields>
    <label>Survey Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Survey2__c</columns>
        <columns>Survey_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SF-{000000}</displayFormat>
        <label>Survey Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Feedbacks</pluralLabel>
    <recordTypes>
        <fullName>VOE_Voice_of_the_Employees</fullName>
        <active>true</active>
        <label>VOE - Voice of the Employee</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>